lab/openshift/infra/kafdrop/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  namespace: guidewire-infra
  labels:
    app: kafdrop
    app.kubernetes.io/part-of: guidewire-poc
spec:
  selector:
    app: kafdrop
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
  type: ClusterIP
